; ModuleID = '/home/carl/AnghaBench/openssl/crypto/x509/extr_x509name.c_X509_NAME_ENTRY_set_object.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/x509/extr_x509name.c_X509_NAME_ENTRY_set_object.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32* }

@X509_F_X509_NAME_ENTRY_SET_OBJECT = common dso_local global i32 0, align 4
@ERR_R_PASSED_NULL_PARAMETER = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @X509_NAME_ENTRY_set_object(%struct.TYPE_3__* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca i32*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %4, align 8
  store i32* %1, i32** %5, align 8
  %6 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %7 = icmp eq %struct.TYPE_3__* %6, null
  br i1 %7, label %11, label %8

8:                                                ; preds = %2
  %9 = load i32*, i32** %5, align 8
  %10 = icmp eq i32* %9, null
  br i1 %10, label %11, label %15

11:                                               ; preds = %8, %2
  %12 = load i32, i32* @X509_F_X509_NAME_ENTRY_SET_OBJECT, align 4
  %13 = load i32, i32* @ERR_R_PASSED_NULL_PARAMETER, align 4
  %14 = call i32 @X509err(i32 %12, i32 %13)
  store i32 0, i32* %3, align 4
  br label %30

15:                                               ; preds = %8
  %16 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %16, i32 0, i32 0
  %18 = load i32*, i32** %17, align 8
  %19 = call i32 @ASN1_OBJECT_free(i32* %18)
  %20 = load i32*, i32** %5, align 8
  %21 = call i32* @OBJ_dup(i32* %20)
  %22 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %23 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %22, i32 0, i32 0
  store i32* %21, i32** %23, align 8
  %24 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %25 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %24, i32 0, i32 0
  %26 = load i32*, i32** %25, align 8
  %27 = icmp eq i32* %26, null
  %28 = zext i1 %27 to i64
  %29 = select i1 %27, i32 0, i32 1
  store i32 %29, i32* %3, align 4
  br label %30

30:                                               ; preds = %15, %11
  %31 = load i32, i32* %3, align 4
  ret i32 %31
}

declare dso_local i32 @X509err(i32, i32) #1

declare dso_local i32 @ASN1_OBJECT_free(i32*) #1

declare dso_local i32* @OBJ_dup(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
